--- a/index.html
+++ b/index.html
@@ -9,5 +9,20 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+
+    <!-- VLibras Plugin -->
+    <div vw class="enabled">
+      <div vw-access-button class="active"></div>
+      <div vw-plugin-wrapper>
+        <div class="vw-plugin-top-wrapper"></div>
+      </div>
+    </div>
+
+    <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        new window.VLibras.Widget("https://vlibras.gov.br/app");
+      });
+    </script>
   </body>
 </html>
